# jharness-tools

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
src/jharness/tools/: __init__.py
src/jharness/tools/agent/: _schema.py  backend.py  response.py  tools.py
src/jharness/tools/filesystem/: _common.py  _write_io.py  edit.py  glob.py  grep.py  read.py  write.py
src/jharness/tools/interaction/: ask_question.py  response.py
src/jharness/tools/shell/: _runner.py  bash.py
tests/: test_agent_response.py  test_agent_tools.py  test_ask_question_tool.py  test_bash_tool.py  test_mutation_tools.py  test_runtime_agents.py  test_runtime_agents_e2e.py  test_runtime_ask_question.py  test_runtime_bash.py  test_runtime_mutations.py  test_tools.py
